Tables at the places.

--- a/_head.tex
+++ b/_head.tex
@@ -7,6 +7,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{tikz}
+\usepackage{hvfloat}
 \usetikzlibrary{arrows,positioning,fit,shapes,calc}
 
 % ORIGINAL
@@ -34,13 +35,20 @@
 \jmlrworkshop{Workshop Title}
 
 
- % Two authors with the same address
-\author{\Name{Paweł Ksieniewicz}
-	\Email{pawel.ksieniewicz@pwr.edu.pl}\\
+% Two authors with the same address
+%\author{\Name{Paweł Ksieniewicz}
+%	\Email{pawel.ksieniewicz@pwr.edu.pl}\\
+%	\addr 
+%	Department of Systems and Computer Networks\\
+%	Faculty of Electronics\\
+%	Wrocław University of Science and Technology
+%}
+\author{\Name{--- ---}
+	\Email{---}\\
 	\addr 
-	Department of Systems and Computer Networks\\
-	Faculty of Electronics\\
-	Wrocław University of Science and Technology
+	---\\
+	---\\
+	---
 }
 
 \editor{Editor's name}
