--- a/figures/ensemble_scheme.tex
+++ b/figures/ensemble_scheme.tex
@@ -1,7 +1,7 @@
 \begin{tikzpicture}%[font=\sffamily\small]
 \tikzset{el/.style={draw, rectangle, minimum width = 1cm, minimum height=1cm}}
 
-%\draw[step=.5cm,gray!30!white,very thin] (-4,-13) grid (7,1.5);
+%\draw[step=.5cm,gray!30!white,very thin] (-4,-15) grid (7,1.5);
 
 \node[rectangle, fill=red!10!white, minimum width=3cm, minimum height=8cm]
  at (5,-3) {};
@@ -47,15 +47,27 @@
 \node[el] (s0) at (-1, -9.5) {$s_1$};
 \node[el] (s1) at (.5, -9.5) {$s_2$};
 \node[el] (sk) at (2.5, -9.5) {$s_k$};
-\node[el, minimum width=2cm] (so) at (5, -9.5) {$s_{os}$};
+\node[el, minimum width=2cm, fill=red!15!white] (so) at (5, -9.5) {$s_{os}$};
 \node[text width = 1cm] at (1.65,-9.5)
 {\bfseries . . .};
 
 
-\node[el, minimum width=7.5cm, minimum height = .5, thick, rounded corners=2mm](fuser) at (2.25,-10.75)
+
+\node[el, minimum width=7.5cm, minimum height = .5, thick, rounded corners=2mm](pruner) at (2.25,-10.75)
+{\textsc{prunner}};
+
+\node[el] (s_0) at (-1, -12) {$s'_1$};
+\node[el] (s_1) at (.5, -12) {$s'_2$};
+\node[el] (s_n) at (5.5, -12) {$s'_n$};
+\node[text width = 1cm] at (3.15,-12)
+{\bfseries . . .};
+
+
+\node[el, minimum width=7.5cm, minimum height = .5, thick, rounded corners=2mm](fuser) at (2.25,-13.25)
 {\textsc{fuser}};
 
-\node[el, minimum width=7.5cm](dec) at (2.25,-11.75)
+
+\node[el, minimum width=7.5cm](dec) at (2.25,-14.25)
 {Decisions};
 
 
@@ -106,6 +118,16 @@
 \draw[->] (s1) -- (.5,-10.5);
 \draw[->] (sk) -- (2.5,-10.5);
 \draw[->] (so) -- (5,-10.5);
+
+\draw[->] (-1,-11) -- (s_0);
+\draw[->] (.5,-11) -- (s_1);
+\draw[->] (5.5,-11) -- (s_n);
+
+
+\draw[->] (s_0) -- (-1,-13);
+\draw[->] (s_1) -- (.5,-13);
+\draw[->] (s_n) -- (5.5,-13);
+
 \draw[->] (fuser) -- (dec);
 
 
