--- a/_head.tex
+++ b/_head.tex
@@ -77,10 +77,10 @@
 	
 	 \\
 	
-	\multicolumn{5}{|c|}{\bfseries All members} &
-	\multicolumn{5}{c||}{\bfseries Reduced members} &
-	\multicolumn{5}{c|}{\bfseries All members} &
-	\multicolumn{5}{c||}{\bfseries Reduced members} 
+	\multicolumn{5}{|c|}{\bfseries Without pruning} &
+	\multicolumn{5}{c||}{\bfseries With pruning} &
+	\multicolumn{5}{c|}{\bfseries Without pruning} &
+	\multicolumn{5}{c||}{\bfseries With pruning} 
 	& & & & \\
 	
 	\multirow{2}{*}{\rotatebox[origin=c]{-90}{\textsc{reg}}} &
