--- a/figures/ensemble_scheme.tex
+++ b/figures/ensemble_scheme.tex
@@ -54,7 +54,7 @@
 
 
 \node[el, minimum width=7.5cm, minimum height = .5, thick, rounded corners=2mm](pruner) at (2.25,-10.75)
-{\textsc{prunner}};
+{\textsc{pruner}};
 
 \node[el] (s_0) at (-1, -12) {$s'_1$};
 \node[el] (s_1) at (.5, -12) {$s'_2$};
